[package]
name = "non-steam-library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
keyvalues-serde = "0.2.1"
steam_shortcuts_util = "1.1.8"
steamlocate = "1.2.1"
